@@ -1,6 +1,6 @@
 package org.sport.backend.serviceImpl;
 
-import org.sport.backend.base.PageResponse;
+import org.sport.backend.dto.base.PageResponse;
 import org.sport.backend.constant.RentalAreaStatus;
 import org.sport.backend.dto.internal.CloudinaryUploadResult;
 import org.sport.backend.dto.request.rental.RentalAreaRequest;
@@ -17,6 +17,7 @@ import org.sport.backend.dto.response.user.UserResponse;
 import org.sport.backend.entity.*;
 import org.sport.backend.exception.AppException;
 import org.sport.backend.exception.ErrorCode;
+import org.sport.backend.mapper.AddressMapper;
 import org.sport.backend.repository.*;
 import org.sport.backend.service.CloudinaryService;
 import org.sport.backend.service.RentalAreaService;
@@ -71,7 +72,10 @@ public class RentalAreaServiceImpl implements RentalAreaService {
     private RentalAreaImageRepository rentalAreaImageRepository;
 
     @Autowired
-    private  CourtPriceRepository courtPriceRepository;
+    private CourtPriceRepository courtPriceRepository;
+
+    @Autowired
+    private AddressMapper addressMapper;
 
     @Override
     public RentalAreaResponse createRentalArea(RentalAreaRequest request, List<MultipartFile> images) {
@@ -81,20 +85,25 @@ public class RentalAreaServiceImpl implements RentalAreaService {
             throw new IllegalArgumentException("RentalArea yêu cầu  1 tới 5 ảnh");
         }
 
-         User owner = userRepository.findById(request.getUserId()).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
+        User owner = userRepository.findById(request.getUserId()).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
         City city = cityRepository.findById(request.getCityId()).orElseThrow(() -> new AppException(ErrorCode.CITY_NOT_FOUND));
 
+        Address address = Address.builder()
+                .ward(request.getWard())
+                .district(request.getDistrict())
+                .street(request.getStreet())
+                .city(city)
+                .build();
 
         RentalArea rentalArea = RentalArea.builder()
                 .rentalAreaName(request.getRentalAreaName())
-                .address(request.getAddress())
+                .address(address)
                 .contactName(request.getContactName())
                 .contactPhone(request.getContactPhone())
                 .status(RentalAreaStatus.ACTIVE)
                 .isActive(true)
                 .owner(owner)
-                .city(city)
                 .build();
 
         rentalAreaRepository.save(rentalArea);
@@ -133,7 +142,7 @@ public class RentalAreaServiceImpl implements RentalAreaService {
         return RentalAreaResponse.builder()
                 .rentalAreaId(rentalArea.getRentalAreaId())
                 .rentalAreaName(rentalArea.getRentalAreaName())
-                .address(rentalArea.getAddress())
+                .address(addressMapper.toAddressResponse(rentalArea.getAddress()))
                 .contactName(rentalArea.getContactName())
                 .contactPhone(rentalArea.getContactPhone())
                 .status(rentalArea.getStatus())
@@ -158,8 +167,8 @@ public class RentalAreaServiceImpl implements RentalAreaService {
                 .toList();
 
         CityResponse cityResponse = CityResponse.builder()
-                .cityId(rentalArea.getCity().getCityId())
-                .cityName(rentalArea.getCity().getCityName())
+                .cityId(rentalArea.getAddress().getCity().getCityId())
+                .cityName(rentalArea.getAddress().getCity().getCityName())
                 .build();
         UserResponse userResponse = UserResponse.builder()
                 .userId(rentalArea.getOwner().getUserId())
@@ -171,7 +180,7 @@ public class RentalAreaServiceImpl implements RentalAreaService {
         return RentalAreaResponse.builder()
                 .rentalAreaId(rentalArea.getRentalAreaId())
                 .rentalAreaName(rentalArea.getRentalAreaName())
-                .address(rentalArea.getAddress())
+                .address(addressMapper.toAddressResponse(rentalArea.getAddress()))
                 .contactName(rentalArea.getContactName())
                 .contactPhone(rentalArea.getContactPhone())
                 .status(rentalArea.getStatus())
@@ -180,6 +189,7 @@ public class RentalAreaServiceImpl implements RentalAreaService {
                 .city(cityResponse)
                 .build();
     }
+
     @Override
     public PageResponse<RentalAreaResponse> getAllRentalAreas(
             int page,
@@ -191,7 +201,7 @@ public class RentalAreaServiceImpl implements RentalAreaService {
             LocalDateTime toDate
     ) {
 
-        Pageable pageable = PageRequest.of(page -1 , size, Sort.by("createdAt").descending());
+        Pageable pageable = PageRequest.of(page - 1, size, Sort.by("createdAt").descending());
 
         Specification<RentalArea> spec = Specification
                 .where(RentalAreaSpecification.isNotDeleted())
@@ -229,7 +239,7 @@ public class RentalAreaServiceImpl implements RentalAreaService {
 
         UUID userId = userService.getMyInfo().getUserId();
 
-        Pageable pageable = PageRequest.of(page -1, size, Sort.by("createdAt").descending());
+        Pageable pageable = PageRequest.of(page - 1, size, Sort.by("createdAt").descending());
 
         Specification<RentalArea> spec = Specification
                 .where(RentalAreaSpecification.isNotDeleted())
@@ -261,19 +271,37 @@ public class RentalAreaServiceImpl implements RentalAreaService {
     public RentalAreaResponse updateRentalArea(UUID rentalAreaId, RentalAreaUpdateRequest request) {
 
         RentalArea rentalArea = rentalAreaRepository.findById(rentalAreaId)
-                .orElseThrow(() -> new RuntimeException("Rental area not found"));
+                .orElseThrow(() -> new AppException(ErrorCode.RENTAL_AREA_NOT_FOUND));
 
-
-        if (request.getRentalAreaName() != null) rentalArea.setRentalAreaName(request.getRentalAreaName());
-        if (request.getAddress() != null) rentalArea.setAddress(request.getAddress());
-        if (request.getContactName() != null) rentalArea.setContactName(request.getContactName());
-        if (request.getContactPhone() != null) rentalArea.setContactPhone(request.getContactPhone());
-        if (request.getStatus() != null) rentalArea.setStatus(request.getStatus());
-        if (request.getCityId() != null) {
-            City city = cityRepository.findById(request.getCityId())
-                    .orElseThrow(() -> new RuntimeException("City not found"));
-            rentalArea.setCity(city);
+        if (request.getRentalAreaName() != null) {
+            rentalArea.setRentalAreaName(request.getRentalAreaName());
         }
+        if (request.getContactName() != null) {
+            rentalArea.setContactName(request.getContactName());
+        }
+        if (request.getContactPhone() != null) {
+            rentalArea.setContactPhone(request.getContactPhone());
+        }
+
+        Address currentAddress = rentalArea.getAddress();
+
+        if (request.getStreet() != null) {
+            currentAddress.setStreet(request.getStreet());
+        }
+        if (request.getWard() != null) {
+            currentAddress.setWard(request.getWard());
+        }
+        if (request.getDistrict() != null) {
+            currentAddress.setDistrict(request.getDistrict());
+        }
+
+        if (request.getCityId() != null) {
+            City newCity = cityRepository.findById(request.getCityId())
+                    .orElseThrow(() -> new AppException(ErrorCode.CITY_NOT_FOUND));
+            currentAddress.setCity(newCity);
+        }
+
+        rentalArea.setAddress(currentAddress);
 
         rentalAreaRepository.save(rentalArea);
 
@@ -326,7 +354,7 @@ public class RentalAreaServiceImpl implements RentalAreaService {
         return RentalAreaResponse.builder()
                 .rentalAreaId(rentalArea.getRentalAreaId())
                 .rentalAreaName(rentalArea.getRentalAreaName())
-                .address(rentalArea.getAddress())
+                .address(addressMapper.toAddressResponse(rentalArea.getAddress()))
                 .contactName(rentalArea.getContactName())
                 .contactPhone(rentalArea.getContactPhone())
                 .status(rentalArea.getStatus())
@@ -403,7 +431,7 @@ public class RentalAreaServiceImpl implements RentalAreaService {
             BigDecimal maxPrice = null;
 
             if (result != null && !result.isEmpty()) {
-                Object[] range = result.get(0);
+                Object[] range = result.getFirst();
 
                 minPrice = range[0] != null ? (BigDecimal) range[0] : null;
                 maxPrice = range[1] != null ? (BigDecimal) range[1] : null;
@@ -426,14 +454,14 @@ public class RentalAreaServiceImpl implements RentalAreaService {
         }).toList();
 
         CityResponse cityResponse = CityResponse.builder()
-                .cityId(rentalArea.getCity().getCityId())
-                .cityName(rentalArea.getCity().getCityName())
+                .cityId(rentalArea.getAddress().getCity().getCityId())
+                .cityName(rentalArea.getAddress().getCity().getCityName())
                 .build();
 
         return RentalAreaDetailResponse.builder()
                 .rentalAreaId(rentalArea.getRentalAreaId())
                 .rentalAreaName(rentalArea.getRentalAreaName())
-                .address(rentalArea.getAddress())
+                .address(addressMapper.toAddressResponse(rentalArea.getAddress()))
                 .contactName(rentalArea.getContactName())
                 .contactPhone(rentalArea.getContactPhone())
                 .city(cityResponse)
@@ -460,7 +488,6 @@ public class RentalAreaServiceImpl implements RentalAreaService {
     public void deleteRentalArea(UUID rentalAreaId) {
         RentalArea rentalArea = rentalAreaRepository.findById(rentalAreaId)
                 .orElseThrow(() -> new AppException(ErrorCode.RENTAL_AREA_NOT_FOUND));
-        
 
         rentalArea.setDeletedAt(LocalDateTime.now());
         rentalAreaRepository.save(rentalArea);
